[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets_PixelAdventure/Menu/Buttons/Back.png" type="Texture" id=1]
[ext_resource path="res://Pausa/Menu de pausa.gd" type="Script" id=2]
[ext_resource path="res://Assets_PixelAdventure/Menu/Buttons/Restart.png" type="Texture" id=3]
[ext_resource path="res://Assets_PixelAdventure/Menu/Buttons/Play.png" type="Texture" id=4]
[ext_resource path="res://Assets_PixelAdventure/Menu/Buttons/Levels.png" type="Texture" id=5]
[ext_resource path="res://Assets_PixelAdventure/Menu/Buttons/fontbolt.png" type="Texture" id=6]

[node name="Menu de pausa" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Popup" type="Popup" parent="."]
margin_left = -116.0
margin_top = -66.0
margin_right = -76.0
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fontbolt" type="Sprite" parent="Popup"]
position = Vector2( 114, 21 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Button2" type="Button" parent="Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 35.0
margin_bottom = 28.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 81.0
margin_right = 114.0
margin_bottom = 28.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 162.0
margin_top = -1.0
margin_right = 195.0
margin_bottom = 27.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = 83.0
margin_right = 21.0
margin_bottom = 105.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Popup/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Popup/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Popup/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Popup/Button4" to="." method="_on_Button4_pressed"]
